# velox

./: CMakeLists.txt
.github/workflows/: benchmark.yml  build-metrics.yml  conbench_upload.yml  macos.yml
CMake/resolve_dependency_modules/: gflags.cmake  icu.cmake
CMake/resolve_dependency_modules/gflags/: gflags-fix-options.patch
docs/: functions.html  genindex.html  searchindex.js
docs/develop/: aggregate-functions.html  connectors.html  memory.html  operators.html  testing.html
docs/develop/testing/: fuzzer.html  join-fuzzer.html
docs/functions/presto/: array.html  coverage.html  most_used_coverage.html  regexp.html
docs/functions/spark/: array.html  conversion.html  datetime.html  window.html
docs/monthly-updates/2022/: august-2022.html  july-2022.html
docs/monthly-updates/2023/: december-2023.html  july-2023.html  november-2023.html  october-2023.html
scripts/: benchmark-runner.py
velox/: CMakeLists.txt
velox/benchmarks/: CMakeLists.txt
velox/benchmarks/tpch/: CMakeLists.txt
velox/buffer/: CMakeLists.txt
velox/codegen/: CMakeLists.txt
velox/common/base/: CMakeLists.txt
velox/common/base/benchmarks/: CMakeLists.txt
velox/common/base/tests/: CMakeLists.txt
velox/common/caching/: CMakeLists.txt
velox/common/caching/tests/: CMakeLists.txt
velox/common/compression/: CMakeLists.txt
velox/common/encode/: CMakeLists.txt
velox/common/file/: CMakeLists.txt
velox/common/file/benchmark/: CMakeLists.txt
velox/common/file/tests/: CMakeLists.txt
velox/common/memory/: CMakeLists.txt
velox/common/memory/tests/: CMakeLists.txt
velox/common/process/: CMakeLists.txt
velox/common/process/tests/: CMakeLists.txt
velox/common/serialization/: CMakeLists.txt
velox/common/time/: CMakeLists.txt
velox/connectors/: CMakeLists.txt
velox/connectors/hive/: CMakeLists.txt
velox/connectors/hive/benchmarks/: CMakeLists.txt
velox/connectors/hive/storage_adapters/gcs/: CMakeLists.txt
velox/connectors/hive/storage_adapters/gcs/tests/: GCSFileSystemTest.cpp
velox/connectors/hive/storage_adapters/hdfs/: CMakeLists.txt
velox/connectors/hive/storage_adapters/s3fs/: CMakeLists.txt
velox/connectors/hive/storage_adapters/s3fs/benchmark/: CMakeLists.txt
velox/connectors/hive/storage_adapters/s3fs/tests/: S3FileSystemTest.cpp
velox/core/: CMakeLists.txt
velox/duckdb/conversion/: CMakeLists.txt
velox/dwio/: CMakeLists.txt
velox/dwio/catalog/fbhive/: CMakeLists.txt
velox/dwio/common/: CMakeLists.txt
velox/dwio/common/compression/: CMakeLists.txt
velox/dwio/common/encryption/: CMakeLists.txt
velox/dwio/common/exception/: CMakeLists.txt
velox/dwio/common/tests/: CMakeLists.txt
velox/dwio/common/tests/utils/: CMakeLists.txt
velox/dwio/dwrf/common/: CMakeLists.txt
velox/dwio/dwrf/reader/: CMakeLists.txt
velox/dwio/dwrf/test/: CMakeLists.txt
velox/dwio/dwrf/test/utils/: CMakeLists.txt
velox/dwio/dwrf/utils/: CMakeLists.txt
velox/dwio/dwrf/writer/: CMakeLists.txt
velox/dwio/parquet/: CMakeLists.txt
velox/dwio/parquet/reader/: CMakeLists.txt
velox/dwio/parquet/tests/reader/: CMakeLists.txt
velox/dwio/parquet/thrift/: CMakeLists.txt
velox/dwio/parquet/writer/: CMakeLists.txt
velox/exec/: CMakeLists.txt
velox/exec/tests/: CMakeLists.txt
velox/exec/tests/utils/: CMakeLists.txt
velox/experimental/codegen/benchmark/: CMakeLists.txt
velox/experimental/codegen/code_generator/: CMakeLists.txt
velox/experimental/codegen/code_generator/tests/: CMakeLists.txt
velox/experimental/codegen/compiler_utils/tests/: CMakeLists.txt
velox/experimental/codegen/external_process/tests/: CMakeLists.txt
velox/experimental/codegen/library_loader/tests/: CMakeLists.txt
velox/experimental/codegen/transform/utils/tests/: CMakeLists.txt
velox/experimental/codegen/vector_function/tests/: CMakeLists.txt
velox/expression/: CMakeLists.txt
velox/expression/benchmarks/: CMakeLists.txt
velox/expression/tests/: CMakeLists.txt  ExprTest.cpp
velox/expression/type_calculation/: CMakeLists.txt
velox/functions/: CMakeLists.txt
velox/functions/lib/: CMakeLists.txt
velox/functions/lib/aggregates/: CMakeLists.txt
velox/functions/lib/aggregates/tests/: CMakeLists.txt
velox/functions/lib/benchmarks/: CMakeLists.txt
velox/functions/lib/string/tests/: CMakeLists.txt
velox/functions/lib/tests/: CMakeLists.txt
velox/functions/lib/window/: CMakeLists.txt
velox/functions/lib/window/tests/: CMakeLists.txt
velox/functions/prestosql/: CMakeLists.txt
velox/functions/prestosql/aggregates/: CMakeLists.txt
velox/functions/prestosql/aggregates/benchmarks/: CMakeLists.txt
velox/functions/prestosql/benchmarks/: CMakeLists.txt
velox/functions/prestosql/json/: CMakeLists.txt
velox/functions/prestosql/json/tests/: CMakeLists.txt
velox/functions/prestosql/registration/: CMakeLists.txt
velox/functions/prestosql/tests/: CMakeLists.txt
velox/functions/prestosql/tests/utils/: CMakeLists.txt
velox/functions/prestosql/types/: CMakeLists.txt
velox/functions/prestosql/window/: CMakeLists.txt
velox/functions/remote/client/: CMakeLists.txt
velox/functions/remote/if/: CMakeLists.txt
velox/functions/remote/server/: CMakeLists.txt
velox/functions/sparksql/: CMakeLists.txt
velox/functions/sparksql/aggregates/: CMakeLists.txt
velox/functions/sparksql/benchmarks/: CMakeLists.txt
velox/functions/sparksql/tests/: CMakeLists.txt
velox/functions/sparksql/window/: CMakeLists.txt
velox/parse/: CMakeLists.txt
velox/serializers/: CMakeLists.txt
velox/substrait/tests/: CMakeLists.txt
velox/type/: CMakeLists.txt  Variant.cpp
velox/type/fbhive/: CMakeLists.txt
velox/type/tz/: CMakeLists.txt
velox/vector/: CMakeLists.txt
velox/vector/arrow/: CMakeLists.txt
velox/vector/benchmarks/: CMakeLists.txt
velox/vector/fuzzer/: CMakeLists.txt
velox/vector/tests/: CMakeLists.txt
velox/vector/tests/utils/: CMakeLists.txt
